# demo-iot-automotive-cloud

./: .gitignore  README-RichSensorData.md  README-temp.md  README.md  app.py  requirements.txt
biga_image/: README.md
biga_image/fleet_provisioining_infra/: gg-bootstrap.yaml
biga_image/repo_seed/: build.buildspec.yml  local.conf
breeze/: README.md  breeze.py  campaign-brake-event.json  campaign-heartbeat.json  config.json  gen.sh  main_frame.py  main_frame.ui  setup_config.json
cleanup-tmp/: nuke-fleetwise.sh
data/campaigns/: campaign-brake-event-mixed.json
data/ros/: ros2-decoders-carla-uncompressed.json  ros2-decoders-carla.json  ros2-decoders.json  ros2-nodes-carla-uncompressed.json  ros2-nodes-carla.json  ros2-nodes.json
demo-iot-automotive-embeddedlinux-image/: manifest.xml
grafana_dashboards/: grafana.py
grafana_dashboards/grafana-image/: Dockerfile
greengrass_components/: README.md  deployment.json.template  ggv2_stack.py
greengrass_components/can_data_analyzer_publisher/: README.md  buildspec.yml  can_publisher.py  gdk-config.json.template  recipe.yaml
greengrass_components/fleetwise_edge_connector/: README.md  build.sh  buildspec.yml  fwe-config-env-parity-eu-central-1.yaml  fwe-config.yaml.template  gdk-config.json.template  recipe.yaml
greengrass_components/greengrass_stats_publisher/: CMakeLists.txt  buildspec.yml  gdk-config.json.template  main.cpp  recipe.yaml
greengrass_components/ipcf_shared_memory/: CMakeLists.txt  README.md  build.sh  buildspec.yml  gdk-config.json.template  ipcf.c  ipcf.h  ipcf_Ip_Cfg.h  ipcf_Ip_Cfg_s32g2.c  ipcf_Ip_Cfg_s32g3.c  main.cpp  recipe.yaml
greengrass_components/ipcf_shared_memory/ipc-shm-us/: Makefile
greengrass_components/ipcf_shared_memory/ipc-shm-us/hw/: ipc-hw.h
greengrass_components/ipcf_shared_memory/ipc-shm-us/os/: ipc-os.c  ipc-os.h
greengrass_components/ipcf_shared_memory_replacement/: README.md  build.sh  buildspec.yml  gdk-config.json.template  ipcf_shared_memory_replacement.py  recipe.yaml
greengrass_components/rosbag2_play/: buildspec.yml  gdk-config.json.template  recipe.yaml
greengrass_components/rtos_app_data_publisher/: CMakeLists.txt  build.sh  gdk-config.json.template  main.cpp  recipe.yaml
greengrass_components/rtos_os_data_publisher/: CMakeLists.txt  buildspec.yml  gdk-config.json.template  main.cpp  recipe.yaml
greengrass_components/virtual_can_forwarder/: CMakeLists.txt  README.md  buildspec.yml  gdk-config.json.template  main.cpp  recipe.yaml
iot_data_ingestion_pipeline/: visibility_stack.py
iot_fleetwise_setup/: main_stack.py
lib/: README.md
lib/cdk-aws-iotfleetwise/: package.json  test.json
temporary/: manifest.xml
temporary/aws4embeddedlinux-ci/: README.md  package.json
vision_system_visuals/: vision_visuals.py
vision_systems_data/: vision_data.py
(+46 files in other folders)
